bug: clicking a cell causes a gap with other cells in the row unless they have also been clicked; add: restart button; need to stop game on win condition

--- a/style.css
+++ b/style.css
@@ -1,5 +1,86 @@
+:root {
+    font-family: Helvetica, Arial, sans-serif;
+    padding:0;
+    background-color: hsl(211, 25%, 80%);
+}
+
+dialog {
+    display: grid;
+    grid-template-rows: 80px repeat(4, 50px) 80px;  
+    text-align: center;
+    gap: 10px;
+    background-color: #7FB1B3;
+    border-radius: 12px;
+    border: solid black 1px;
+
+    & h2 {
+        margin: 0;
+        font-size: 1.8em;
+        align-content: center;
+    }
+
+    & label {
+        font-size: 1.5em;
+        align-content: center;
+    }
+
+    & input {
+        text-align: center;
+        background-color: hsl(0, 0%, 92%);
+    }
+    & input:focus {
+        background-color: white;
+        border: solid hsl(0,0%,80%) 2px;
+    }
+
+    
+    & button, input {
+        font-size: 1.5em;
+        border-radius: 12px;
+        border: none;
+        outline: none;
+    }
+
+    & button {
+        background-color: #5F7EA0;
+    }
+    & button:hover {
+        background-color: hsl(211, 25%, 40%);
+    }
+    & button:active {
+        background-color: hsl(211, 25%, 25%);
+    }
+}
+
+dialog:not([open]){
+    display:none;
+  }
+/* #5FA082 */
+body {
+    display: grid;
+    justify-content: center;
+    grid-template-rows: 90px ;
+}
+
+.container {
+    grid-row: 2/3;
+
+    display: grid;
+    grid-template-rows: 50px repeat(3, 200px) 80px;
+    gap: 2px;
+}
+
+.player-turn {
+    justify-self: center;
+    
+    margin: 0;
+    grid-row: 1/2;
+
+}
+
 .board>button{
     box-sizing: border-box;
+    border-radius: 12px;
     width: 200px;
     height: 200px;
     background-color: #5f9ea0;
